--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 mollitia, quo iste nulla
                 voluptate rem quibusdam amet cum eius pariatur blanditiis nostrum maxime commodi doloremque, ad facilis?
             </p>
-            <button>Clique no SININHO</button>
+            <button>Ative as notificações!</button>
         </div>
 
         <div class="caixa-imagem">
